fix: adjust min-height and overflow for better layout on various devices

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,15 +2,17 @@
 @import "./styles/breakpoints";
 
 html {
+  overflow: hidden;
   min-height: -webkit-fill-available;
+  min-height: 100vh;
 }
 
 body {
   background-color: #393f4c;
   height: 100vh;
   margin: 0;
-  min-height: 100vh;
   min-height: -webkit-fill-available;
+  min-height: 100vh;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
